--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
+		"predev": "pnpm generate:types",
 		"build": "vite build",
+		"prebuild": "pnpm generate:types",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
