Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -3,6 +3,7 @@ media:
   output: /media
 
 content:
+
   - name: site-settings
     label: Site settings
     path: src/lib/site/settings.json
@@ -11,9 +12,28 @@ content:
       - name: title
         label: Website title
         type: string
+        required: true
       - name: description
         label: Website description
         type: string
       - name: logo
         label: Site logo
         type: image
+  
+  - name: home-page
+    label: Home page
+    path: src/lib/site/home.json
+    type: file
+    fields:
+      - name: title
+        label: Homepage title
+        type: string
+        required: true
+      - name: description
+        label: Homepage description
+        type: string
+        required: true
+      - name: cover
+        label: Cover image
+        type: image
+        required: true
