--- a/.pages.yml
+++ b/.pages.yml
@@ -53,7 +53,7 @@ content:
   - name: blog
     label: Blog
     path: src/lib/site/blog
-    type: content
+    type: collection
     fields:
       - name: title
         label: Title
