Revert "new structure"
This reverts commit d4c8499c0e2ef2c454c66144f9e2f42e4529a2d1.

--- a/src/lib/site/settings.json
+++ b/src/lib/site/settings.json
@@ -1,23 +1,4 @@
 {
 	"title": "Pages CMS Template",
-	"description": "A good starting point for your next website",
-	"logo": "/media/go-to-web-icon-for-your-web-design-logo-infographic-ui-vector.jpg",
-	"menu": [
-		{
-			"label": "Home",
-			"href": "/"
-		},
-		{
-			"label": "About",
-			"href": "/about"
-		},
-		{
-			"label": "Resources",
-			"href": "/resources"
-		},
-		{
-			"label": "Contact",
-			"href": "/contact"
-		}
-	]
+	"logo": "/media/go-to-web-icon-for-your-web-design-logo-infographic-ui-vector.jpg"
 }
