--- a/src/lib/site/settings.json
+++ b/src/lib/site/settings.json
@@ -1,4 +1,18 @@
 {
 	"title": "Pages CMS Template",
-	"logo": "/media/go-to-web-icon-for-your-web-design-logo-infographic-ui-vector.jpg"
+	"logo": "/media/go-to-web-icon-for-your-web-design-logo-infographic-ui-vector.jpg",
+	"menu": [
+		{
+			"label": "Home",
+			"href": "/"
+		},
+		{
+			"label": "Blog",
+			"href": "/blog"
+		},
+		{
+			"label": "About",
+			"href": "/about"
+		}
+	]
 }
