--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"effect": "^3.10.15",
+		"html-entities": "^2.5.2",
 		"marked": "^15.0.1",
 		"runed": "^0.15.3",
 		"yaml": "^2.6.1"
