Update src/lib/site/settings.json (via Pages CMS)

--- a/src/lib/site/settings.json
+++ b/src/lib/site/settings.json
@@ -1,18 +1,22 @@
 {
-	"title": "Pages CMS Template",
-	"logo": "/media/go-to-web-icon-for-your-web-design-logo-infographic-ui-vector.jpg",
-	"menu": [
-		{
-			"label": "Home",
-			"href": "/"
-		},
-		{
-			"label": "Blog",
-			"href": "/blog"
-		},
-		{
-			"label": "About",
-			"href": "/about"
-		}
-	]
+  "title": "Pages CMS Template",
+  "logo": "/media/go-to-web-icon-for-your-web-design-logo-infographic-ui-vector.jpg",
+  "menu": [
+    {
+      "label": "Home",
+      "href": "/"
+    },
+    {
+      "label": "Blog",
+      "href": "/blog"
+    },
+    {
+      "label": "About",
+      "href": "/about"
+    },
+    {
+      "label": "Articoli",
+      "href": "/articoli"
+    }
+  ]
 }
