--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"scripts": {
 		"dev": "vite dev",
 		"predev": "pnpm generate:types",
+		"postdev": "pnpm generate:csv",
 		"build": "vite build",
 		"prebuild": "pnpm generate:types",
+		"postbuild": "pnpm generate:csv",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
