--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
+		"dotenv": "^16.4.5",
 		"effect": "^3.10.15",
 		"flat": "^6.0.1",
 		"html-entities": "^2.5.2",
