--- a/src/lib/site/settings.json
+++ b/src/lib/site/settings.json
@@ -1,28 +1,28 @@
 {
-	"title": "Pages CMS Template",
-	"logo": "/media/go-to-web-icon-for-your-web-design-logo-infographic-ui-vector.jpg",
-	"menu": [
-		{
-			"label": "Home",
-			"href": "/"
-		},
-		{
-			"label": "Blog",
-			"href": "/blog"
-		},
-		{
-			"label": "About",
-			"href": "/about"
-		},
-		{
-			"label": "Articoli",
-			"href": "/articoli"
-		}
-	],
-	"colors": {
-		"base": "#1a1b3c",
-		"base-content": "#ffffff",
-		"accent": "#ffd700",
-		"accent-content": "#1a1b3c"
-	}
+  "title": "Pages CMS Template",
+  "logo": "/media/go-to-web-icon-for-your-web-design-logo-infographic-ui-vector.jpg",
+  "menu": [
+    {
+      "label": "Home",
+      "href": "/"
+    },
+    {
+      "label": "Blog",
+      "href": "/blog"
+    },
+    {
+      "label": "About",
+      "href": "/about"
+    },
+    {
+      "label": "Articoli",
+      "href": "/articoli"
+    }
+  ],
+  "colors": {
+    "base": "#d7f9fc",
+    "base-content": "#051517",
+    "accent": "#ffd700",
+    "accent-content": "#1a1b3c"
+  }
 }
